# Akselisauvaturnaus

./: .editorconfig  .gitignore  Akselisauvaturnaus.cpp  Akselisauvaturnaus.hpp  Akselisauvaturnaus.pch  CMakeLists.txt  Competition.cpp  Competition.hpp  Game.cpp  Game.hpp  Main.cpp  Player.cpp  Player.hpp  ReadMe.md  Strategy.cpp  Strategy.hpp  Tournament.cpp  Tournament.hpp
